# TypeGodMD

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.png.orig
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  finder.rs  mod.rs  search.rs  web.rs
src/components/: ConfirmDialog.tsx  DiffView.tsx  FileInfoDialog.tsx  InputDialog.tsx  MainLayout.tsx  MoveConflictDialog.tsx  StartScreen.tsx  TitleBar.tsx  TrashDialog.tsx
src/components/Chat/: Chat.tsx
src/components/Editor/: Editor.tsx  ImageViewer.tsx  InlineDiffEditor.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  OfficeViewer.tsx  PDFViewer.tsx  WysiwygEditor.tsx
src/components/FileExplorer/: FileContextMenu.tsx  FileExplorer.tsx
src/components/GraphView/: GraphView.tsx
src/components/Search/: SearchDialog.tsx
src/components/Settings/: Settings.tsx
src/services/: fileSystem.ts  mcp.ts  openai.ts  trash.ts
src/stores/: appStore.ts
